--- a/web/package.json
+++ b/web/package.json
@@ -4,7 +4,10 @@
   "description": "gRPC-Web CommonJS client example",
   "license": "Apache-2.0",
   "dependencies": {
-    "google-protobuf": "~3.14.0"
+    "express": "^4.17.1",
+    "google-protobuf": "~3.14.0",
+    "sdp": "^2.12.0",
+    "webrtc-adapter": "^7.7.1"
   },
   "devDependencies": {
     "webpack": "~4.43.0",
