--- a/client/package.json
+++ b/client/package.json
@@ -13,6 +13,7 @@
     "styled-components": "^5.1.0",
     "uuid": "^7.0.3",
     "firebase": "^7.14.1",
+    "formik": "^2.1.4",
     "firebase-tools": "^8.11.2",
     "moment": "^2.27.0",
     "query-string": "^6.12.1",
