--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "socket.io": "^2.3.0",
-    "wrtc": "^0.4.7"
+    "wrtc": "^0.4.7",
+    "simple-peer": "9.6.2"
   },
   "scripts": {
     "start": "PROD=true node server.js",
